src/sass/_home.scss
.options {
  display: flex;
  flex-wrap: wrap;
  width: 350px;

  @media (max-width: $md-width) {
    width: 100%;
  }

  &__content {
    display: flex;
    flex-wrap: wrap;
    background-color: $blue;
    width: calc(100% - 65px);
    height: 100%;
    padding: 20px;

    @media (max-width: $md-width) {
      width: 100%;
    }

    &-items, header, footer {
      width: 100%;
    }

    &-items {
      margin: 35px 0;
      position: relative;
    }

    &-item {
      display: none;
      padding-bottom: 55px;

      h3 {
        margin-bottom: 15px;
      }

      &--active {
        display: block;
      }

      &--instructions {
        padding-bottom: 0;

        p:first-of-type {
          margin-bottom: 10px;
        }

        .spinner {
          font-size: 75px;
          margin: 35px auto 0;
          text-align: center;
        }

        ul {
          margin: 0;
          padding-left: 20px;
        }

        li {
          margin-top: 5px;
        }
      }
    }

    footer {
      align-self: flex-end;
      font-size: 14px;

      a {
        color: $white;
        transition: 200ms opacity ease;

        &:hover {
          opacity: 0.75;
          text-decoration: underline;
        }
      }
    }
  }

  &__question {
    position: relative;

    &--units  {
      max-width: 250px;

      input[type="text"], input[type="number"] {
        padding-right: 35px;
      }

      .options__units {
        right: 0;
        margin-bottom: 0;
        box-shadow: -15px 0px 10px -5px $white;
      }
    }

    div:not(:last-of-type) {
      margin-bottom: 10px;
    }
  }

  &__date {
    &-start, &-end {
      margin: 0;
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      align-items: center;

      &--hidden {
        display: none;
      }
    }

    &-end {
      margin-bottom: 10px;
    }

    &--hidden {
      display: none;
    }

    .options__input {
      background-image: url('../images/arrow-down.svg');
      background-repeat: no-repeat;
      background-size: 9px 9px;
      background-position: right 10px center;
      padding: 5px 10px;

      &--year {
        width: calc(31% - 5px);
      }

      &--month {
        width: calc(45% - 5px);
      }

      &--day {
        width: calc(24% - 5px);
      }
    }
  }

  &__checkbox {
    overflow-y: scroll;
    max-height: 185px;
    margin-top: 13px;
    width: 100%;
    padding-right: 15px;

    @media (min-width: $sm-width-plus) and (max-width: $md-width) {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;

      div {
        width: calc(50% - 10px);
      }
    }
  }

  &__units {
    font-size: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 0;
    height: 35px;
    width: 35px;
    padding: 0;
    background-color: $navy;
  }

  &__event {
    a {
      color: $navy;
      font-weight: 600;

      &:hover {
        color: $white;
      }
    }

    p:last-of-type {
      margin-top: 5px;
    }

    &-description {
      margin: 10px 0;
      overflow-wrap: break-word;
      word-wrap: break-word;
      hyphens: manual;

      p:not(:last-of-type) {
        margin-bottom: 10px;
      }

      a {
        font-weight: 400;
      }

      ul {
        padding-left: 20px;
        margin: 0;
      }

      strong {
        font-weight: 400;
      }

      &--scroll {
        max-height: 140px;
        overflow-y: scroll;
        padding-right: 15px;
      }
    }

    .fa {
      font-size: 12px;
    }

    .event-time--hidden {
      display: none;
    }
  }

  &__button--next {
    position: absolute;
    bottom: 0;
    right: 0;
  }

  &__tabs {
    background-color: $navy;
    height: 100%;
    position: relative;

    @media (max-width: $md-width) {
      height: auto;
      width: 100%;
      display: flex;
    }

    @media (max-width: $sm-width) {
      justify-content: space-between;
    }

    &-item {
      color: $grey;
      width: 65px;
      height: 65px;
      font-size: 30px;
      padding: 15px;
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      transition: 200ms color ease, 200ms background-color ease;

      @media (max-width: $sm-width) {
        width: calc(100% / 7);
        height: 50px;
        font-size: 25px;
      }

      @media (max-width: $xs-width) {
        height: 45px;
        font-size: 20px;
      }

      &:last-of-type {
        position: absolute;
        bottom: 0;
        right: 0;

        @media (max-width: $sm-width) {
          position: relative;
        }
      }

      &:nth-last-of-type(2) {
        position: absolute;
        bottom: 65px;
        right: 0;

        @media (max-width: $md-width) {
          bottom: 0;
          right: 65px;
        }

        @media (max-width: $sm-width) {
          position: relative;
          right: 0;
        }
      }

      &:nth-last-of-type(3) {
        position: absolute;
        bottom: 130px;
        right: 0;

        @media (max-width: $md-width) {
          bottom: 0;
          right: 130px;
        }

        @media (max-width: $sm-width) {
          position: relative;
          right: 0;
        }
      }

      &:hover, &:active, &:focus {
        color: $transparent-white;
      }

      &--active {
        background-color: $blue;
        color: $white;

        &:hover {
          color: $white;
        }
      }

      &--disabled {
        pointer-events: none;
      }
    }
  }

  &__directions {
    &-items {
      margin: 5px 0 0;

      &--scroll {
        max-height: 235px;
        overflow-y: scroll;
        padding-right: 15px;
      }

      p {
        margin-top: 5px;
      }

      b {
        font-weight: 300;
      }
    }
  }
}

.map {
  width: calc(100% - 350px);
  height: 100vh;
  min-height: 600px;
  position: relative;

  @media (max-width: $md-width) {
    width: 100%;
  }

  &__map {
    width: 100%;
    height: 100%;
  }

  &__legend {
    background-color: $transparent-white;
    color: $navy;
    font-size: 14px;
    padding: 10px 15px;
    position: absolute;
    top: 20px;
    right: 20px;
    width: 225px;

    @media (min-width: $md-width-plus) and (max-width: $lg-width) {
      display: none;
    }

    @media (max-width: 650px) {
      display: none;
    }

    &--hidden {
      display: none;
    }

    h3 {
      margin-bottom: 10px;
    }

    &-item {
      margin-bottom: 5px;
      position: relative;

      &:last-of-type {
        margin-bottom: 0;
      }
    }

    .fa {
      color: $blue;
      width: 10px;
    }

    span {
      position: absolute;
      left: 25px;
    }
  }

  .gm-style, .gm-style-iw {
    font-family: 'Lato', sans-serif;
    font-weight: 300;
  }
}

.overlay {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 1;
  background-color: rgba(0, 0, 0, 0.3);

  &__content {
    width: 100%;
    max-width: 500px;
    background-color: $white;
    padding: 20px;
    font-size: 30px;
    color: $navy;
    text-align: center;
  }

  &__text {
    margin-bottom: 20px;
  }

  &__button:not([disabled]) {
    &:hover, &:active, &:focus {
      background-color: $blue;
      color: $white;
      font-weight: 300;
    }
  }
}

